<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidRestWS</string>
    <string name="title_test_key">Test Key</string>
    <string name="title_get_data">Get Data</string>
    <string name="title_save_data">Save Data</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings">Settings</string>
    <string name="rest_ws_url_title">URL</string>
    <string name="rest_ws_url_summary">In order to perform Web Service calls</string>
    <string name="rest_ws_key_title">Key</string>
    <string name="rest_ws_key_summary">Grants access to the Web Service</string>
    <string name="save">Save</string>

</resources>
